# wasp-mcp

./: .gitignore  LICENSE  PROTOCOL.md  README.md
GH_MCP_Wasp/: GH_MCP_Wasp.csproj  WaspMCPComponent.cs  WaspMCPInfo.cs
GH_MCP_Wasp/Commands/: CaptureCommandHandler.cs  ComponentCommandHandler.cs  ConnectionCommandHandler.cs  DocumentCommandHandler.cs  GeometryCommandHandler.cs  GrasshopperCommandRegistry.cs  IntentCommandHandler.cs  WaspCommandHandler.cs
GH_MCP_Wasp/Models/: CommandModels.cs
GH_MCP_Wasp/Utils/: CanvasUtils.cs  FuzzyMatcher.cs  IntentRecognizer.cs  UiSync.cs
docs/: REGRESSION_LOG.md  arch-corpus-report.md  architecture.md  cookbook.md  development.md  field-analysis.md  generation-principles.md  tool-reference.md  troubleshooting.md  v03-backlog.md  v06-fidelity-roadmap.md  validation-scenarios.md  wasp-practices.md
server/: README.md  THIRD-PARTY-NOTICES.md  conftest.py  expander.py  gh_client.py  macros.py  pyproject.toml  registry.py  server.py
server/knowledge/: LICENSE-KNOWLEDGE.md  arch_component_kb.json  arch_patterns.json  component_kb.json  stage_explainers.json  wasp_patterns.json
server/tests/: test_offline.py  test_registry.py  test_v02.py  test_v03.py  test_v04.py  test_v05.py
tools/install/: install.ps1  uninstall.ps1
tools/yak/: build-yak.ps1  manifest.yml
