[project]
name = "wasp-mcp-server"
version = "0.5.0"
description = "MCP server that places and wires Wasp components on a live Grasshopper canvas (bridge: GH_MCP_Wasp, TCP localhost, default port 8090, optional WASP_MCP_TOKEN auth per PROTOCOL v0.5)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.scripts]
wasp-mcp-server = "server:main"
# Back-compat alias for configs written before v0.5.
wasp-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat-layout modules; server.py is the entry point (uv run wasp-mcp / uv run server.py)
only-include = ["server.py", "gh_client.py", "registry.py", "macros.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
