[project]
name = "wasp-mcp-server"
version = "0.5.2"
description = "MCP server that places and wires Wasp discrete-aggregation components on a live Grasshopper canvas (bridge: GH_MCP_Wasp / wasp-mcp-bridge on Yak, TCP localhost, default port 8090, optional WASP_MCP_TOKEN auth per PROTOCOL v0.5)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
authors = [{ name = "LiangJung" }]
keywords = ["mcp", "grasshopper", "wasp", "rhino", "aggregation", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "fastmcp>=2.0",
]

[project.urls]
Repository = "https://github.com/liangjunglj-cpu/wasp-mcp"

[project.scripts]
wasp-mcp-server = "server:main"
# Back-compat alias for configs written before v0.5.
wasp-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat-layout modules; server.py is the entry point (uvx wasp-mcp-server).
# expander.py and knowledge/ are runtime requirements: server.py imports
# expander, and macros.py/expander.py load knowledge/*.json next to the
# module files.
only-include = [
    "server.py",
    "gh_client.py",
    "registry.py",
    "macros.py",
    "expander.py",
    "knowledge",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
